--- a/catalogue.html
+++ b/catalogue.html
@@ -8,22 +8,21 @@
   </head>
 
   <body>
-    <header class="page-header">
-      <a href="index.html" class="header-logo">
-        <img src="img/device-logo.svg" alt="Логотип интернет-магазина Device" width="163" height="35">
+    <header class="catalogue-header page-header page-wrapper">
+      <a href="#">
+        <img src="img/device-logo.svg" class="header-logo" alt="Логотип интернет-магазина Device" width="163" height="35">
       </a>
 
       <div class="header-top">
         <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
           <label for="header-search" class="visually-hidden">Поиск по сайту</label>
           <input type="text" name="search" id="header-search" placeholder="Поиск по сайту">
-          <button type="submit">Найти</button>
+          <button type="submit" class="search-button"><span>Найти</span></button>
         </form>
 
-        <div class="header-inner-wrapper">
+        <div class="header-inner-wrapper page-column-right">
           <ul class="sign-in">
-            <li><a href="#">Валентин Петухов</a></li>
-            <li><a href="#">Выйти</a></li>
+            <li><a href="#">Войти</a></li>
           </ul>
           <a href="#">Сравнить</a>
           <a href="#">Корзина</a>
@@ -31,7 +30,7 @@
       </div>
 
       <nav class="main-navigation">
-        <ul>
+        <ul class="main-navigation-wrapper">
           <li class="navigation-item">
             <a href="catalogue.html">Каталог товаров</a>
             <ul class="catalogue-list visually-hidden">
@@ -51,155 +50,170 @@
     </header>
 
     <main>
-      <h1 class="page-title">Моноподы для селфи</h1>
-      <ul class="catalogue-top-nav">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalogue.html">Каталог товаров</a></li>
-        <li><a href="#">Моноподы для селфи</a></li>
-      </ul>
-
-      <section class="filters">
-        <h2 class="title">Фильтры</h2>
-        <form action="https://echo.htmlacademy.ru" method="get" class="filters">
-          <fieldset>
-            <legend>Стоимость</legend>
-
-            <div class="price-range">
-              <div class="price-scale"></div>
-              <div class="toggle toggle-min"></div>
-              <div class="toggle toggle-max"></div>
-            </div>
-            <label>от <input type="number" value="0" name="min-price"></label>
-            <label>до <input type="number" value="5000" name="max-price"></label>
-          </fieldset>
-
-          <fieldset>
-            <legend>Цвет</legend>
-            <ul>
-              <li><label><input type="checkbox" name="black" checked>Чёрный</label></li>
-              <li><label><input type="checkbox" name="white">Белый</label></li>
-              <li><label><input type="checkbox" name="blue" checked>Синий</label></li>
-              <li><label><input type="checkbox" name="red" checked>Красный</label></li>
-              <li><label><input type="checkbox" name="pink">Розовый</label></li>
-            </ul>
-          </fieldset>
-
-          <fieldset>
-            <legend>Bluetooth</legend>
-            <ul>
-              <li><label><input type="radio" name="bluetooth" checked>Есть</label></li>
-              <li><label><input type="radio" name="bluetooth">Нет</label></li>
-            </ul>
-          </fieldset>
-          <button type="submit" class="button">Показать</button>
-        </form>
-      </section>
-
-      <section class="catalogue">
-        <h2 class="visually-hidden">Товары категории</h2>
-
-        <div class="sorting">
-          <p class="title">Сортировка:</p>
-          <a href="#">По цене</a>
-          <a href="#">По типу</a>
-          <a href="#">По популярности</a>
-
-          <ul class="sorting-direction">
-            <li><a href="#">По возрастанию</a></li>
-            <li><a href="#">По убыванию</a></li>
-          </ul>
-        </div>
-
-        <ul class="catalogue-list">
-          <li class="catalogue-item">
-            <img src="img/item1.jpg" alt="Изображение товара" width="360" height="380">
-            <h3 class="title"><a href="#">Любительская селфи-палка</a></h3>
-            <span class="catalogue-price">500 руб.</span>
-            <div class="catalogue-item-hidden">
-              <a href="#" class="button">В корзину</a>
-              <a href="#" class="catalogue-compare">Добавить к сравнению</a>
-            </div>
-          </li>
-
-          <li class="catalogue-item">
-            <img src="img/item2.jpg" alt="Изображение товара" width="360" height="380">
-            <h3 class="title"><a href="#">Профессиональная селфи-палка</a></h3>
-            <span>1 500 руб.</span>
-            <div class="catalogue-hidden">
-              <a href="#" class="button">В корзину</a>
-              <a href="#" class="catalogue-compare">Добавить к сравнению</a>
-            </div>
-          </li>
-
-          <li class="catalogue-item">
-            <img src="img/item3.jpg" alt="Изображение товара" width="360" height="380">
-            <h3 class="title"><a href="#">Непотопляемая селфи-палка</a></h3>
-            <span>2 500 руб.</span>
-            <div class="catalogue-hidden">
-              <a href="#" class="button">В корзину</a>
-              <a href="#" class="catalogue-compare">Добавить к сравнению</a>
-            </div>
-          </li>
-
-          <li class="catalogue-item">
-            <img src="img/item4.jpg" alt="Изображение товара" width="360" height="380">
-            <h3 class="title"><a href="#">Селфи-палка "Следуй за мной"</a></h3>
-            <span>4 900 руб.</span>
-            <div class="catalog-hidden">
-              <a href="#" class="button">В корзину</a>
-              <a href="#" class="catalogue-compare">Добавить к сравнению</a>
-            </div>
-          </li>
+      <div class="page-wrapper">
+        <h1 class="page-title catalogue-page-title">Моноподы для селфи</h1>
+        <ul class="catalogue-top-nav">
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="catalogue.html">Каталог товаров</a></li>
+          <li><a href="#">Моноподы для селфи</a></li>
         </ul>
+      </div>
 
-        <div class="catalogue-nav">
-          <p class="visually-hidden">Навигация по страницам каталога</p>
-          <a href="#" class="catalogue-nav-direction">Назад</a>
+      <div class="catalogue-page-wrapper">
+        <div class="name-sorting-wrapper">
+          <p class="title filters-title">Фильтр:</p>
+          <div class="sorting">
+            <p class="title sorting-title">Сортировка:</p>
+            <div class="sort-types">
+              <a href="#">По цене</a>
+              <a href="#">По типу</a>
+              <a href="#">По популярности</a>
+            </div>
 
-          <ul class="catalogue-pages">
-            <li class="page-number page-current"><a href="#"><span class="visually-hidden">Страница </span>1</a></li>
-            <li class="page-number"><a href="#"><span class="visually-hidden">Страница </span>2</a></li>
-            <li class="page-number"><a href="#"><span class="visually-hidden">Страница </span>3</a></li>
-          </ul>
-
-          <a href="#" class="catalogue-nav-direction">Вперед</a>
+            <ul class="sorting-direction">
+              <li><a href="#">По возрастанию</a></li>
+              <li><a href="#">По убыванию</a></li>
+            </ul>
+          </div>
         </div>
-      </section>
+
+        <div class="catalogue-wrapper-bottom">
+          <section class="filters">
+            <h2 class="visually-hidden">Фильтр:</h2>
+
+            <div class="filter-body-wrapper">
+              <form action="https://echo.htmlacademy.ru" method="get" class="filters">
+                <fieldset>
+                  <legend>Стоимость</legend>
+
+                  <div class="price-range">
+                    <div class="price-scale"></div>
+                    <div class="toggle toggle-min"></div>
+                    <div class="toggle toggle-max"></div>
+                  </div>
+                  <label>от <input type="number" value="0" name="min-price"></label>
+                  <label>до <input type="number" value="5000" name="max-price"></label>
+                </fieldset>
+
+                <fieldset>
+                  <legend>Цвет</legend>
+                  <ul>
+                    <li><label><input type="checkbox" name="black" checked>Чёрный</label></li>
+                    <li><label><input type="checkbox" name="white">Белый</label></li>
+                    <li><label><input type="checkbox" name="blue" checked>Синий</label></li>
+                    <li><label><input type="checkbox" name="red" checked>Красный</label></li>
+                    <li><label><input type="checkbox" name="pink">Розовый</label></li>
+                  </ul>
+                </fieldset>
+
+                <fieldset>
+                  <legend>Bluetooth</legend>
+                  <ul>
+                    <li><label><input type="radio" name="bluetooth" checked>Есть</label></li>
+                    <li><label><input type="radio" name="bluetooth">Нет</label></li>
+                  </ul>
+                </fieldset>
+                <button type="submit" class="button">Показать</button>
+              </form>
+            </div>
+          </section>
+
+          <section class="catalogue">
+
+              <h2 class="visually-hidden">Товары категории</h2>
+
+              <ul class="catalogue-list">
+                <li class="catalogue-item">
+                  <img src="img/item1.jpg" alt="Изображение товара" width="360" height="380">
+                  <h3 class="title"><a href="#">Любительская селфи-палка</a></h3>
+                  <span class="catalogue-price">500 руб.</span>
+                  <!--<div class="catalogue-item-hidden">
+                    <a href="#" class="button">В корзину</a>
+                    <a href="#" class="catalogue-compare">Добавить к сравнению</a>
+                  </div>-->
+                </li>
+
+                <li class="catalogue-item">
+                  <img src="img/item2.jpg" alt="Изображение товара" width="360" height="380">
+                  <h3 class="title"><a href="#">Профессиональная селфи-палка</a></h3>
+                  <span>1 500 руб.</span>
+                  <!--<div class="catalogue-item-hidden">
+                    <a href="#" class="button">В корзину</a>
+                    <a href="#" class="catalogue-compare">Добавить к сравнению</a>
+                  </div>-->
+                </li>
+
+                <li class="catalogue-item">
+                  <img src="img/item3.jpg" alt="Изображение товара" width="360" height="380">
+                  <h3 class="title"><a href="#">Непотопляемая селфи-палка</a></h3>
+                  <span>2 500 руб.</span>
+                  <!--<div class="catalogue-item-hidden">
+                    <a href="#" class="button">В корзину</a>
+                    <a href="#" class="catalogue-compare">Добавить к сравнению</a>
+                  </div>-->
+                </li>
+
+                <li class="catalogue-item">
+                  <img src="img/item4.jpg" alt="Изображение товара" width="360" height="380">
+                  <h3 class="title"><a href="#">Селфи-палка "Следуй за мной"</a></h3>
+                  <span>4 900 руб.</span>
+                  <!--<div class="catalogue-item-hidden">
+                    <a href="#" class="button">В корзину</a>
+                    <a href="#" class="catalogue-compare">Добавить к сравнению</a>
+                  </div>-->
+                </li>
+              </ul>
+
+              <div class="catalogue-nav">
+                <p class="visually-hidden">Навигация по страницам каталога</p>
+                <a href="#" class="catalogue-nav-direction">Назад</a>
+
+                <ul class="catalogue-pages">
+                  <li class="page-number page-current"><a href="#"><span class="visually-hidden">Страница </span>1</a></li>
+                  <li class="page-number"><a href="#"><span class="visually-hidden">Страница </span>2</a></li>
+                  <li class="page-number"><a href="#"><span class="visually-hidden">Страница </span>3</a></li>
+                </ul>
+
+                <a href="#" class="catalogue-nav-direction">Вперед</a>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
     </main>
 
     <footer>
-      <div class="footer-wrapper">
-        <img src="img/e-logo.svg" alt="Логотип магазина Device" width="163" height="35">
-        <div>
-          <ul class="sign-in">
-            <li><a href="#">Валентин Петухов</a></li>
-            <li><a href="#">Выйти</a></li>
+      <div class="page-wrapper">
+        <!--<img src="img/logo-yellow.svg" alt="Логотип магазина Device" width="163" height="35" class="footer-logo"> -->
+        <div class="footer-wrapper-top">
+          <ul class="footer-sign-in">
+            <li><a href="#">Войти</a></li>
           </ul>
           <a href="#">Сравнить</a>
           <a href="#">Корзина</a>
         </div>
-      </div>
 
-      <div class="footer-wrapper">
-        <address>г.Москва, ул. Строителей, 15</address>
+        <div class="footer-wrapper-mid">
+          <address>г.Москва, ул. Строителей, 15</address>
 
-        <ul>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
+          <ul class="footer-nav">
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
 
-        <a href="tel:+74954959595">Тел: +7 (495) 495-95-95</a>
-      </div>
+          <a href="tel:+74954959595">Тел: +7 (495) 495-95-95</a>
+        </div>
 
-      <div class="footer-wrapper">
-        <ul class="social-links">
-          <li class="FB"><a href="#">Facebook</a></li>
-          <li class="IG"><a href="#">Instagram</a></li>
-          <li class="TW"><a href="#">Twitter</a></li>
-        </ul>
+        <div class="footer-wrapper-bottom">
+          <ul class="social-links">
+            <li class="Fb"><a href="#">Facebook</a></li>
+            <li class="Ig"><a href="#">Instagram</a></li>
+            <li class="Tw"><a href="#">Twitter</a></li>
+          </ul>
 
-        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/academy-logo.svg" alt="Логотип HTML Academy" width="27" height="34">HTML Academy</a>
+          <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-academy"><img src="img/academy-logo.svg" alt="Логотип HTML Academy" width="27" height="34"><span class="visually-hidden">HTML Academy</span></a>
+        </div>
       </div>
     </footer>
   </body>
